Changing the view

--- a/templates/integration/hallway/propagation/thesis.html
+++ b/templates/integration/hallway/propagation/thesis.html
@@ -5,6 +5,7 @@
 {% block content %}
     <div class="animated fadeIn">
         <div class="row">
+
             <div class="col-md-4">
                 <div class="card">
                     <div class="card-body">
@@ -18,6 +19,27 @@
                                 <th scope="row">Helper Teacher Name</th>
                                 <td>Ahmad Anvari</td>
                             </tr>
+                            <tr>
+                                <th scope="row">Judge Teacher Name1</th>
+                                <td>Ahmad Anvari</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Judge Teacher Name2</th>
+                                <td>Ahmad Anvari</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Judge Teacher Name3</th>
+                                <td>Ahmad Anvari</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Date</th>
+                                <td>Ahmad Anvari</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Time</th>
+                                <td>13:30</td>
+                            </tr>
+
                             </tbody>
                         </table>
                         <div class="col">
