Change the base template

--- a/templates/integration/class/table.html
+++ b/templates/integration/class/table.html
@@ -1,4 +1,4 @@
-{% extends "integration/layout/base.html" %}
+{% extends "integration/layout/template.html" %}
 {% block pagetitle %}
     {{ class_room.name }}
 {% endblock %}
