--- a/templates/integration/layout/template.html
+++ b/templates/integration/layout/template.html
@@ -101,6 +101,15 @@
                 </li>
                 <li class="menu-item-has-children dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+                       aria-expanded="false"> <i class="menu-icon fa fa-tasks"></i>Bulk Scheduling</a>
+                    <ul class="sub-menu children dropdown-menu">
+                        <li><i class="menu-icon fa fa-fort-awesome"></i><a href="{% url "classroom.bulk" %}">Teaching Class</a>
+                        </li>
+                        <li><i class="menu-icon ti-themify-logo"></i><a href="font-themify.html">Propagation </a></li>
+                    </ul>
+                </li>
+                <li class="menu-item-has-children dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                        aria-expanded="false"> <i class="menu-icon fa fa-tasks"></i>Propagation</a>
                     <ul class="sub-menu children dropdown-menu">
                         <li><i class="menu-icon fa fa-fort-awesome"></i><a href="">Teaching Class</a>
