--- a/templates/integration/class/bulk.html
+++ b/templates/integration/class/bulk.html
@@ -2,8 +2,30 @@
 {% block pagetitle %}
     Teaching Class Bulk Scheduling
 {% endblock %}
+
 {% block content %}
     <div class="animated fadeIn">
+        <div class="row">
+            {% for excel_file in excel_file_list %}
+                <div class="col-6 col-lg-3">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="clearfix">
+                            <i class="fa fa-cogs bg-flat-color-5 p-3 font-2xl mr-3 float-left text-light"></i>
+                            <div class="h5 text-secondary mb-0 mt-1">{{ excel_file }}</div>
+{#                            <div class="text-muted text-uppercase font-weight-bold font-xs small">Income</div>#}
+                        </div>
+                        <div class="b-b-1 pt-3"></div>
+                        <hr>
+                        <div class="more-info pt-2" style="margin-bottom:-10px;">
+                            <a class="font-weight-bold font-xs btn-block text-muted small" href="{% url "classroom.bulk.file" excel_file %}">View More <i
+                                    class="fa fa-angle-right float-right font-lg"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div><!--/.col-->
+            {% endfor %}
+        </div><!-- .row -->
         <div class="row">
             <div class="col-lg-6">
                 <div class="card">
