Show current date time in homepage

--- a/templates/integration/index.html
+++ b/templates/integration/index.html
@@ -55,10 +55,11 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="stat-widget-one">
-                            <div class="stat-icon dib"><i class="ti-money text-success border-success"></i></div>
+                            <div class="stat-icon dib">
+                                <i class="ti-time text-success border-success"></i></div>
                             <div class="stat-content dib">
-                                <div class="stat-text">Total Profit</div>
-                                <div class="stat-digit">1,012</div>
+                                <div class="stat-text">Local Time</div>
+                                <div class="stat-digit">{{ local_time_hour }} : {{ local_time_minute }}</div>
                             </div>
                         </div>
                     </div>
@@ -69,10 +70,11 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="stat-widget-one">
-                            <div class="stat-icon dib"><i class="ti-user text-primary border-primary"></i></div>
+                            <div class="stat-icon dib">
+                                <i class="ti-calendar text-primary border-primary"></i></div>
                             <div class="stat-content dib">
-                                <div class="stat-text">New Customer</div>
-                                <div class="stat-digit">961</div>
+                                <div class="stat-text">Local Date</div>
+                                <div class="stat-digit">{{ local_date_weekday }} {{ local_date_day }} {{ local_date_month }} {{ local_date_year }}</div>
                             </div>
                         </div>
                     </div>
