Change the style of index page

--- a/templates/integration/index.html
+++ b/templates/integration/index.html
@@ -51,7 +51,7 @@
         <div class="row">
 
 
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-6 col-md-12">
                 <div class="card">
                     <div class="card-body">
                         <div class="stat-widget-one">
@@ -66,7 +66,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-6 col-md-12">
                 <div class="card">
                     <div class="card-body">
                         <div class="stat-widget-one">
@@ -81,33 +81,33 @@
                 </div>
             </div>
 
-            <div class="col-lg-3 col-md-6">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="stat-widget-one">
-                            <div class="stat-icon dib"><i class="ti-layout-grid2 text-warning border-warning"></i></div>
-                            <div class="stat-content dib">
-                                <div class="stat-text">Active Projects</div>
-                                <div class="stat-digit">770</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-3 col-md-6">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="stat-widget-one">
-                            <div class="stat-icon dib"><i class="ti-link text-danger border-danger"></i></div>
-                            <div class="stat-content dib">
-                                <div class="stat-text">Referrals</div>
-                                <div class="stat-digit">2,781</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+{#            <div class="col-lg-3 col-md-6">#}
+{#                <div class="card">#}
+{#                    <div class="card-body">#}
+{#                        <div class="stat-widget-one">#}
+{#                            <div class="stat-icon dib"><i class="ti-layout-grid2 text-warning border-warning"></i></div>#}
+{#                            <div class="stat-content dib">#}
+{#                                <div class="stat-text">Active Projects</div>#}
+{#                                <div class="stat-digit">770</div>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{##}
+{#            <div class="col-lg-3 col-md-6">#}
+{#                <div class="card">#}
+{#                    <div class="card-body">#}
+{#                        <div class="stat-widget-one">#}
+{#                            <div class="stat-icon dib"><i class="ti-link text-danger border-danger"></i></div>#}
+{#                            <div class="stat-content dib">#}
+{#                                <div class="stat-text">Referrals</div>#}
+{#                                <div class="stat-digit">2,781</div>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
 
 
             <div class="col-6 col-lg-3">
