commit all last work

--- a/templates/integration/upload-image/index.html
+++ b/templates/integration/upload-image/index.html
@@ -1,6 +1,6 @@
 {% extends "integration/layout/template.html" %}
 {% block pagetitle %}
-    Hallway Thesis Propagation
+    Image Upload
 {% endblock %}
 {% block content %}
     <div class="animated fadeIn">
